# TNFSH-Learning-Portfolio-Backup-System

./: .gitignore  README.md  TNFSH_Learning_Portfolio_Backup_System_v2.bat  backend.py  backstage.py  frontend.py  imac.icon  main.py  pyproject.toml  surface.py  v1_main.py  v2_main.py
Resource/: backend.py  frontend.py
src/: backend.py  frontend.py  icon.py  v1_main.py  v2_main.py
v1/: main.py  setup.bat
v1/Resource/: backend.py  frontend.py
v2/: Learning_Portfolio_Backup_System.bat  setup.bat
v2/Resource/: backend.py  frontend.py
