[project]
name = "Learning-Portfolio-Backup-System"
version = "1.0.1"
requires-python = "<=3.13"
description = "A simple python project."
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "bs4>=0.0.2",
    "ddddocr>=1.5.6",
    "pillow>=11.3.0",
    "pyperclip>=1.9.0",
    "requests>=2.32.5",
]
